# PandoraColdStart

./: .gitignore  docker-compose.yml  pyproject.toml
data/: schedule.json
docker-build/: Dockerfile_bot
src/: .env.template  run.py
src/apps/: algoritm.py
src/apps/bot/: bot_main.py
src/apps/bot/handlers/: main.py
src/apps/bot/handlers/user/: __init__.py
src/apps/bot/handlers/user/commands/: commands.py  settings.py
src/apps/bot/handlers/user/keyboards/: main.py
src/apps/bot/keyboards/: main.py
src/apps/bot/keyboards/schedule/: day.py  main.py
src/apps/pandora/: api.py  base.py
src/apps/utils/: schedule.py  storage.py
src/core/: config.py  tg_msg.py
