[tool.poetry]
name = "pandora"
version = "0.1.0"
description = ""
authors = ["lnv <mail@nlavrov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.10"
pydantic-settings = "^2.11.0"
black = "^25.9.0"
aiogram = "^3.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
